--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
   </style>
 </head>
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
+  <main>
+    <section class="card">
+      <img src="./assets/images/avatar-jessica.jpeg" alt="Profile image of Jessica Randall">
+      <h1>Jessica Randall</h1>
+      <h2>London, United Kingdom</h2>
+        <p>"Front-end developer and avid reader."</p>
+          <a href="#" class="card-button">GitHub</a>
+          <a href="#" class="card-button">Frontend Mentor</a>
+          <a href="#" class="card-button">LinkedIn</a>
+          <a href="#" class="card-button">Twitter</a>
+          <a href="#" class="card-button">Instagram</a>
+  </section>
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Willem Savio Freeke</a>.
-  </div>
+  </footer>
 </body>
 </html>
