--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
       <h1>Jessica Randall</h1>
       <h2>London, United Kingdom</h2>
         <p>"Front-end developer and avid reader."</p>
+        <div class="btn-section">
           <a href="#" class="card-button">GitHub</a>
           <a href="#" class="card-button">Frontend Mentor</a>
           <a href="#" class="card-button">LinkedIn</a>
           <a href="#" class="card-button">Twitter</a>
           <a href="#" class="card-button">Instagram</a>
+        </div>
   </section>
   </main>
   <footer class="attribution">
